# Anima

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  backends.cmake  index.html  index.md
.github/workflows/: cmake.yml  codeql-analysis.yml
backends/io/dummy_keyboard/: CMakeLists.txt  dummy_keyboard.cpp  dummy_keyboard.hpp  params.cmake
backends/io/linux_keyboard/: CMakeLists.txt  linux_keyboard.cpp  linux_keyboard.hpp  params.cmake
backends/video/dummy_video/: CMakeLists.txt  dummy_video.cpp  dummy_video.hpp  params.cmake
backends/video/sdl_opengl/: CMakeLists.txt  params.cmake  sdl_opengl.cpp  sdl_opengl.hpp
include/Backend/: IOBackend.hpp  VideoBackend.hpp
include/Engine/: Entity.hpp  Instance.hpp  Mesh.hpp  Scene.hpp  Voxel.hpp  pch.hpp
logseq/logseq/: config.edn  pages-metadata.edn
logseq/logseq/.recycle/: pages_G1.md  pages_Graphics Standards.md  pages_Standards.Standards.md  pages_Standards.md
logseq/logseq/bak/: export test_static_js_excalidraw.js.2022-02-05T15_31_22.798Z  pages_Standards.Graphics.G1.md.2022-02-08T09_34_06.266Z  pages_Standards.md.2022-02-08T09_34_06.283Z  pages_contents.md.2022-02-08T09_34_06.246Z
logseq/pages/: Standards.Graphics.G2.md  Standards.Graphics.md
src/Engine/: Entity.cpp  Instance.cpp  Mesh.cpp  Scene.cpp  Voxel.cpp
src/Runtime/: main.cpp
